--- a/index.html
+++ b/index.html
@@ -1,21 +1,239 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panda-Commerce</title>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 </head>
+
 <body>
-    hello
+    <div class="container">
 
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"><img src="images/panda-commerce/logo.png" alt="logo"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#shoes">Shoes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#Backpack">BackPack</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#contact-us">Contact Us</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
 
+    <div class="container">
 
+        <div id="carouselExampleControls" class="carousel slide carousel-bg" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="row align-items-center">
+                        <div class="col-md-7">
+                            <h1>HeadPhone</h1>
+                            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat eum, sint, alias facere
+                                accusamus nihil qui quaerat maxime, nisi ipsum reiciendis vero!</P>
+                            <h1 class="price">$999</h1>
+                            <button class="btn-buy">Buy Now</button>
+                        </div>
+                        <div class="col-md-5">
+                            <img src="images/panda-commerce/banner-images/headphone.png" class="d-block w-100"
+                                alt="banner">
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="row align-items-center">
+                        <div class="col-md-7">
+                            <h1>Mi LED TV 4A PRO 32</h1>
+                            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat eum, sint, alias facere
+                                accusamus nihil qui quaerat maxime, nisi ipsum reiciendis vero!</P>
+                            <h1 class="price">$1200</h1>
+                            <button class="btn-buy">Buy Now</button>
+                        </div>
+                        <div class="col-md-5">
+                            <img src="images/panda-commerce/banner-images/tv.png" class="d-block w-100" alt="banner">
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="row align-items-center">
+                        <div class="col-md-7">
+                            <h1>Gaming Xbox</h1>
+                            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat eum, sint, alias facere
+                                accusamus nihil qui quaerat maxime, nisi ipsum reiciendis vero!</P>
+                            <h1 class="price">$700</h1>
+                            <button class="btn-buy">Buy Now</button>
+                        </div>
+                        <div class=col-md-5>
+                            <img src="images/panda-commerce/banner-images/xbox.png" class="d-block w-100" alt="banner">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
 
+    </div>
+
+    <div class="container categories">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="cata1 d-flex justify-content-between align-items-center">
+                    <h1>Watch</h1>
+                    <img src="images/panda-commerce/categories/watch.png" alt="">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="cata2 d-flex justify-content-between align-items-center">
+                    <h1>Shoes</h1>
+                    <img src="images/panda-commerce/categories/shoes.png" alt="">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="cata3 d-flex justify-content-between align-items-center">
+                    <h1>Bag</h1>
+                    <img src="images/panda-commerce/categories/bag.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container shoes" id="shoes">
+        <h3>Shoes</h3>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+                <div class="card h-100">
+                    <img src="images/panda-commerce/shoes/shoe-1.png" class="card-img-top" alt="imges">
+                    <div class="card-body">
+                        <h5 class="card-title">Supply 350</h5>
+                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                        <h5>$120</h5>
+                        <button class="btn-buy">Buy Now</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="images/panda-commerce/shoes/shoe-2.png" class="card-img-top" alt="images">
+                    <div class="card-body">
+                        <h5 class="card-title">Nike 220</h5>
+                        <p class="card-text">This is a short Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                            Saepe? Lorem ipsum dolor sit amet.</p>
+                        <h5>$300</h5>
+                        <button class="btn-buy">Buy Now</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="images/panda-commerce/shoes/shoe-3.png" class="card-img-top" alt="images">
+                    <div class="card-body">
+                        <h5 class="card-title">Nike Airmax </h5>
+                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                            additional content.</p>
+                        <h5>$320</h5>
+                        <button class="btn-buy">Buy Now</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container" id="Backpack">
+        <h3>Bags</h3>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+                <div class="card h-100">
+                    <img src="images/panda-commerce/bags/bag-1.png" class="card-img-top" alt="images">
+                    <div class="card-body">
+                        <h5 class="card-title">Ogio Bag</h5>
+                        <h5>$199</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet quis
+                            distinctio eveniet maiores aperiam voluptatem neque fugiat .</p>
+                    </div>
+                    <div class="card-footer">
+                         <button class="btn-buy">Buy Now</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="images/panda-commerce/bags/bag-2.png" class="card-img-top" alt="bag">
+                    <div class="card-body">
+                        <h5 class="card-title">Burton Bag</h5>
+                        <h5>$249</h5>
+                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione pariatur
+                            dolores animi deserunt maxime necessitatibus! Ipsam..</p>
+                    </div>
+                    <div class="card-footer">
+                         <button class="btn-buy">Buy Now</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="images/panda-commerce/bags/bag-3.png" class="card-img-top" alt="bag">
+                    <div class="card-body">
+                        <h5 class="card-title">Addidas Bag</h5>
+                        <h5>$149</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus
+                            necessitatibus fuga assumenda quam sint deleniti .</p>
+                    </div>
+                    <div class="card-footer">
+                         <button class="btn-buy">Buy Now</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+    <div class="container carousel-bg d-flex flex-column align-items-center justify-content-center" id="contact-us">
+        <div><h2>Let's Stay In Touch</h2>
+            <h6>Get updates on sales, specials and more</h6>
+            <input class="form-control" type="text" placeholder="Enter Your Email">
+            <button class="btn-buy"> Submit</button>
+        </div>
+    </div>
+    <footer>
+        <small>&copy; Copyright 2022. All Right Reserved</small>
+    </footer>
 
     <!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"
+        integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
